LDEV-3339: Add sources for Lucene 4.10.